objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>View_Forwarded_Lead__c</fullName>
        <formula>if(Deal_Forward__c, HYPERLINK( &quot;/&quot; &amp; Forwarded_Lead_ID__c, &quot;View Forwarded Lead&quot;, &quot;_self&quot;),&quot;Not Forwarded&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>View Forwarded Lead</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Winning_Competitor__c</fullName>
        <label>Winning Competitor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Competitor A</fullName>
                </value>
                <value>
                    <fullName>Competitor B</fullName>
                </value>
                <value>
                    <fullName>Competitor C</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Work_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is needed to allow FSL Mobile users to create new opportunities</description>
        <label>Work Order</label>
        <referenceTo>WorkOrder</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>analyticsdemo_batch_id__c</fullName>
        <label>analyticsdemo_batch_id__c</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cv__c</fullName>
        <defaultValue>false</defaultValue>
        <label>cv</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sbaa__ApprovalStatus__c</fullName>
        <description>Overall Approval Status for this Opportunity</description>
        <inlineHelpText>Overall Approval Status for this Opportunity</inlineHelpText>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Recalled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sbaa__ApprovalStep__c</fullName>
        <description>Used with Native Approvals to indicate the step in the approval process this Opportunity is in</description>
        <inlineHelpText>Used with Native Approvals to indicate the step in the approval process this Opportunity is in</inlineHelpText>
        <label>Approval Step</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sbaa__Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used with Native Approvers; indicates which Approver is responsible for approving the Opportunity.</description>
        <inlineHelpText>Used with Native Approvers; indicates which Approver is responsible for approving the Opportunity.</inlineHelpText>
        <label>Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sbaa__StepApproved__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used with Native Approvals; to indicate whether the step has been approved</description>
        <inlineHelpText>Used with Native Approvals; to indicate whether the step has been approved</inlineHelpText>
        <label>Step Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sbaa__SubmittedDate__c</fullName>
        <description>Date when record was submitted for approval</description>
        <inlineHelpText>Date when record was submitted for approval</inlineHelpText>
        <label>Submitted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>sbaa__SubmittedUser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User requesting approval for the Opportunity.</description>
        <inlineHelpText>User requesting approval for the Opportunity.</inlineHelpText>
        <label>Submitted User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>SubmittedUserOpportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <listViews>
        <fullName>AllOpenOpportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.SimpleOpportunity</value>
        </filters>
        <label>My Opportunities</label>
    </listViews>
    <listViews>
        <fullName>ClosingNextMonth</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>NEXT_MONTH</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.SimpleOpportunity</value>
        </filters>
        <label>Closing Next Month</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ClosingThisMonth</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.SimpleOpportunity</value>
        </filters>
        <label>Closing This Month</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Default_Opportunity_Pipeline</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>LAST_N_MONTHS:3</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
        </filters>
        <label>Opportunity Pipeline</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Engineer_to_Order_Opportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.MFG_ETO_Opportunity</value>
        </filters>
        <label>Engineer to Order Opportunities</label>
    </listViews>
    <listViews>
        <fullName>MyOpportunitiesPartner</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My Open Deals</label>
        <language>en_US</language>
        <sharedTo>
            <allPartnerUsers></allPartnerUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Partner_Opportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>PARTNER.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PARTNER.NAME</field>
            <operation>contains</operation>
            <value>Partners,Resellers,Distributors</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>notEqual</operation>
            <value>1</value>
        </filters>
        <label>Partner Opportunities</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
            <group>Channel_Managers</group>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>ChannelPartner</fullName>
        <active>true</active>
        <businessProcess>Channel Sales Process</businessProcess>
        <description>Opportunities created by or for partners.</description>
        <label>Channel (Partner)</label>
    </recordTypes>
    <recordTypes>
        <fullName>MFG_ETO_Opportunity</fullName>
        <active>true</active>
        <businessProcess>MFG ETO</businessProcess>
        <description>ETO Opportunities</description>
        <label>Engineer to Order</label>
    </recordTypes>
    <recordTypes>
        <fullName>Revenue_Cloud</fullName>
        <active>true</active>
        <businessProcess>Simple Sales Process</businessProcess>
        <description>Revenue Operation Flow</description>
        <label>Revenue Cloud</label>
    </recordTypes>
    <recordTypes>
        <fullName>SimpleOpportunity</fullName>
        <active>true</active>
        <businessProcess>Simple Sales Process</businessProcess>
        <description>Simple Opportunities with products.</description>
        <label>Simple Opportunity</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Reason_Lost_Required</fullName>
        <active>false</active>
        <errorConditionFormula>AND (  ISPICKVAL( StageName, &quot;Closed Lost&quot;), ISPICKVAL( Reason_Lost__c , &quot;&quot;)   )</errorConditionFormula>
        <errorDisplayField>StageName</errorDisplayField>
        <errorMessage>If the stage equals closed - lost, then the reason lost is a required field.</errorMessage>
    </validationRules>
</CustomObject>